--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -141,7 +141,7 @@
             
               <div class="mt-4 md:mt-0">
                   <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Email Design for Amenify</h2>
-                  <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                  <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">One of my favourite design that i did for a client and also the most successful one.</p>
                   <a href="https://www.figma.com/file/yzQi5Ea2hWAw1Eb4HC6lNh/My-Work?type=design&node-id=7%3A2&mode=design&t=Uox1IvGnWJtpXD0u-1" target="_blank" class="inline-flex items-center my-5 text-white bg-zinc-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:focus:ring-primary-900">
                       View Design
                       <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
