--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -46,9 +46,14 @@
 
                       
 
-                      <p class="mb-0 text-neutral-500 dark:text-neutral-300">
-                        As an aspiring web/graphic designer and video editor, I am looking for an opportunity to utilise my skill set and infuse creativity into every pixel. With a blend of a deep understanding of design principles and knowledge of website and email programming, I bring a strong work ethic, a keen sense of responsibility and a quick ability to learn. Explore my diverse portfolio specialising in graphic design, branding, video editing and coding. I look forward to the opportunity to work with you and contribute to your team's success. Let us work together!
+                      <p class="pb-2 text-neutral-500 dark:text-neutral-300">
+                        As an aspiring web/graphic designer and video editor, I am looking for an opportunity to utilise my skill set and infuse creativity into every pixel. With a blend of a deep understanding of design principles and knowledge of website and email programming, I bring a strong work ethic, a keen sense of responsibility and a quick ability to learn.
                       </p>
+                    
+                    <p class="mb-0 text-neutral-500 dark:text-neutral-300">
+                      Explore my diverse portfolio specialising in graphic design, branding, video editing and coding. I look forward to the opportunity to work with you and contribute to your team's success. Let us work together!
+                    </p>
+                  
                     </div>
                   </div>
 
@@ -141,7 +146,8 @@
             
               <div class="mt-4 md:mt-0">
                   <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Email Design for Amenify</h2>
-                  <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">One of my favourite design that i did for a client and also the most successful one.</p>
+                  <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">
+                    One of the designs I created for a client stands out as not only a personal favorite but also as one of my most successful projects.</p>
                   <a href="https://www.figma.com/file/yzQi5Ea2hWAw1Eb4HC6lNh/My-Work?type=design&node-id=7%3A2&mode=design&t=Uox1IvGnWJtpXD0u-1" target="_blank" class="inline-flex items-center my-5 text-white bg-zinc-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:focus:ring-primary-900">
                       View Design
                       <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
