--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -76,7 +76,7 @@
 
           <!-- Container for demo purpose -->
           <div class="container px-15 gap-1 my-26 mx-auto md:px-6 place-items-center lg:text-left  "  >
-          <section class="flex gap-10  justify-center items-center lg:grid-cols-3 place-items-center">
+          <section class="flex gap-10 onrow justify-center items-center lg:grid-cols-3 place-items-center">
             <div class="max-w-sm p-6 my-5 bg-white border border-gray-200 rounded-lg shadow dark:bg-[hsla(0,0%,5%,0.55)] dark:shadow-black/20 dark:border-gray-700">
               <a href="#">
                   <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Email Design's</h5>
